[tool.poetry]
name = "ini_parser_py"
version = "0.1.0"
description = "ini parser"
authors = ["mariobassem <mariobassem12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
